tests/ecc-aws-169-security_group_ingress_is_restricted_traffic_to_port_4333/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-0be3d1d06e30fdebc",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "security_group_red"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "security_group_red",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 100,
                        "ToPort": 10000,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            },
            {
                "GroupId": "sg-0be3d1d06e30fdedd",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "security_group_red2"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "security_group_red2",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 100,
                        "ToPort": 10000,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
